Height & Overlapping issues fixed

--- a/src/app/supplierComponents/proDetail/proDetail.scss
+++ b/src/app/supplierComponents/proDetail/proDetail.scss
@@ -6,11 +6,13 @@
     top: 0;
     right: 0;
     left: 0;
-    height: 150px;
+    height: 120px;
     //width: 100%;
     background-image: url(/assets/images/backgrounds/header-bg.png);
     background-size: cover;
-  text-align: center;
+    text-align: center;
+    display: inline-table;
+    width: 100%;
   h1{
     margin: 10px 0px 0px 0px;
   }
@@ -153,6 +155,11 @@
       font-family:Roboto, "Helvetica Neue", Arial, sans-serif;
       font-size:16px;
       font-weight:bold;
+      display: inline-table;
+      }
+      .footer {
+            height: 50px;
+             display: inline-table;
       }
     .steps-indicator.steps-3:before {
                   left: calc(107% / 3 / 2);
